# magnetodb

./: .gitignore  .gitreview  .testr.conf  MANIFEST.in  README.md  README.rst  groups  project.config  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
contrib/: cql_samples.txt  generate_items_to_insert.py
contrib/devstack/: README.rst
deployment/: magnetodb_install.sh
devstack/: README.rst  plugin.sh  settings
doc/: deploy_magnetodb_howto.rst
doc/source/: api.rst  (+30 more)
etc/: api-paste-async.ini  api-paste-fake.ini  api-paste-gunicorn.ini  api-paste-test.ini  api-paste.ini  bulk-paste.ini  bulk-server.conf  data-load.conf  logging.conf.sample  logging_sample.conf  magnetodb-api-server-gunicorn.conf  magnetodb-api-server-test.conf  magnetodb-api-server.conf  magnetodb-api-test.conf  magnetodb-api.conf  magnetodb-async-api-server.conf  magnetodb-async-task-executor.conf  magnetodb-metrics-service.conf  magnetodb-schema-processor.conf  magnetodb-stream-api-server.conf  magnetodb-stream-api.conf  magnetodb-streaming-api-server-gunicorn.conf  magnetodb-streaming-api-server.conf  magnetodb-streaming-api.conf  magnetodb-test.conf  magnetodb.conf  policy.json  stream-paste.ini  streaming-api-paste-gunicorn.ini  streaming-api-paste.ini
functionaltests/: post_test_hook.sh  pre_test_hook.sh  run_tests.sh
magnetodb/: __init__.py  context.py  i18n.py  policy.py  version.py
tempest/: clients.py  config.py  exceptions.py  tempest.conf  test.py
tools/: debug_helper.sh  install_cassandra_ccm.sh  install_venv.py  upgrade-schema-bug1298814.txt
(+617 files in other folders)
