[metadata]
name = magnetodb
version = 2.0.1
summary = MagnetoDB is key-value database service for OpenStack cloud
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    magnetodb
    cassandra
scripts =
    bin/magnetodb-api-server
    bin/magnetodb-api-server-gunicorn
    bin/data-load

[global]
setup-hooks =
    pbr.hooks.setup_hook

[compile_catalog]
directory = magnetodb/locale
domain = magnetodb

[update_catalog]
domain = magnetodb
output_dir = magnetodb/locale
input_file = magnetodb/locale/heat.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = magnetodb/locale/heat.pot

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
